# dungeon-sheets

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.rst  Dockerfile  MANIFEST  MSavage_template.tex  Makefile  README.md  README.rst  SaveSpells.ipynb  Terminus2049.iso  __init__.py  all_spells.csv  ben.py  bloodhunterFeature.py  docker-compose.yml  makefile  pyproject.toml  rangerClassFile.py  rangerFeatureFile.py  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
docs/: advanced_features.rst  character_files.html  character_files.rst  conf.py  contributing.rst  examples.rst  gm_notes.rst  index.rst
dungeonsheets/: ToDoNotes.txt  __init__.py  agent.py  armor.py  background.py  character.py  character_template.txt  classes.py  content.py  content_registry.py  create_character.py  dice.py  druid_shapes_template.tex  empty_template.tex  encounter.py  entity.py  epub.py  equipment_reader.py  exceptions.py  features.py  features_template.tex  fill_pdf_template.py  forms.py  homebrew.py  infusions.py  ioutils.py  latex.py  magic_items.py  make_sheets.py  mechanics.py  monsters.py  parse_json.py  pdf_image_insert.py  race.py  random_tables.py  readers.py  spellbook_template.tex  spells.py  stats.py  utils.py  (+1 more)
examples/: HB_races.py  artificer1.py  artificer2.json  barbarian1.py  barbarian2.py  barbarian3.json  bard1.py  bard2.py  bard3_foundry.json  bloodhunter1.py  cleric1.py  cleric2.py  druid.py  druid1.py  druid2.py  druid3.py  fighter1.py  fighter2.py  gm-campaign-notes.py  gm-session-notes.py  gm.py  homebrew.py  homebrew_campaign.py  homebrewelda.py  kits.py  makefile  monk1.py  monk2.py  multiclass.py  multiclass1.py  multiclass2.py  multiclass_2.py  paladin1.py  paladin2.py  paladin3.py  ranger1.py  rogue.py  (+18 more)
(+173 files in other folders)
